<resources>
    <string name="app_name">Sonar</string>
    <string name="title_home">Sonar App</string>
    <string name="title_notifications">Notifications</string>
    <string name="text_description">App automatically connects to the wifi network of your sonar after pressing the connect button</string>
    <string name="button_connect">connect</string>
    <string name="WifiIsDisabled">Wifi is disabled..making it enabled</string>
    <string name="NotPermit">Wifi Permission is not allowed</string>
    <string name="AlreadyConnected">Already connected to Sonar</string>
    <string name="SucessfullyConnected">Successfully connected</string>
    <string name="SonarIsUnavailable">Sonar is unavailable\nUse Manual Connection</string>
    <string name="WifiManagerIsUnavailable">Wifi Manager is unavailable</string>
    <string name="inProcess">Connection to Sonar in process</string>
    <string name="button_upload">UPLOAD</string>
    <string name="turnOnWifiManually">Android is not allowed to turn on the WIFI programmatically, turn on wifi manually.. </string>
    <string name="manual_connect">Feature</string>
    <string name="manual_connect_description">Turn on sonar\nTurn on wifi\nConnect to microsonar\n\tpassword = microsonar\nClick button again</string>
    <string name="map">Map</string>
    <string name="auto_connection">auto connect</string>
    <string name="cancel">cancel</string>
    <string name="download">download</string>
    <string name="butInProgress">IN PROGRESS</string>
    <string name="abort_connection">Connection took a too long time,\n use a manual connection.</string>
    <string name="abort_connection_manual_connect_description">Connection took a too long time.\nTurn on sonar\nTurn on wifi\nConnect to microsonar\n\tpassword = microsonar\nClick button again</string>
    <string name="connect">CONNECT</string>
</resources>
